src/tests/snapshots/gitu__tests__unstage__unstage_added_file_with_spaces_in_name.snap
---
source: src/tests/unstage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Untracked files                                                                |
▌file with space.txt                                                            |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git restore --staged file with space.txt                                      |
styles_hash: 2ccf6c2919834e
