src/tests/snapshots/gitu__tests__unstage__unstage_all_staged.snap
---
source: src/tests/unstage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Untracked files                                                                |
 one                                                                            |
 two                                                                            |
▌unaffected                                                                     |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git reset HEAD --                                                             |
styles_hash: 828d215dcad428cf
