src/tests/snapshots/gitu__tests__unstage__unstage_deleted_executable_file.snap
---
source: src/tests/unstage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 2 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
▌deleted    script.sh…                                                          |
                                                                                |
 Recent commits                                                                 |
 af83421 main add executable script                              Author Name __ |
 289f1e5 add script.sh                                           Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git restore --staged script.sh                                                |
styles_hash: 679d9dc1c1d743d2
