src/tests/snapshots/gitu__tests__unstage__unstage_removed_line.snap
---
source: src/tests/unstage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   firstfile                                                           |
 @@ -1,3 +1,2 @@                                                                |
▌-testing                                                                       |
  weehooo                                                                       |
  blrergh                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 modified   firstfile                                                           |
 @@ -1,2 +1,3 @@                                                                |
  testing                                                                       |
 -testtest                                                                      |
 +weehooo                                                                       |
 +blrergh                                                                       |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --cached --reverse --recount                                        |
styles_hash: cc22c3496d9b7af1
